# tollgate

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIELD-STUDY.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  validation.yml
artefacts/: Tollgate-Design.md
ci-templates/: .gitlab-ci.yml  .pre-commit-hooks.yaml  github-workflow.yml
docs/: field-study.html
examples/: autogpt_agent.json  babyagi_agent.py  langgraph_agent.py
examples/agents/: LoopAgent.java  MultiStep.java  bounded_loop.go  crewai_hierarchical.py  crewai_sequential.py  imperative_loop.js  langgraph4j_react.java  langgraph_pipeline.ts  langgraph_react.js  loop_agent.go  loop_agent.rb  multi_step.go  multi_step.rb  wrapper_loop.go
examples/workflows/: runaway_agent.yaml  safe_pipeline.yaml  summarizer.prompt
scripts/: scan-github-repo.sh  scan-repo.sh  ts_probe.py
src/tollgate/: __init__.py  agentic_lint.py  baseline.py  catalog.py  cli.py  config.py  detectors.py  findings.py  forecast.py  graphutil.py  html_report.py  intent.py  ir.py  pipeline.py  policy.py  prediction.py  prompt_review.py  prompt_scan.py  remediation.py  report.py  scoring.py  simulation.py  substitution.py  tokenizer.py
src/tollgate/data/: models.yaml
src/tollgate/parsers/: __init__.py  autogpt.py  crewai.py  dsl.py  imperative.py  javascript.py  langgraph.py  prompt.py  treesitter_backend.py  treesitter_multilang.py
tests/: test_analyzer.py  test_logic_boundaries.py  test_prompt_review.py  test_prompt_scan_languages.py  test_study_feedback.py
validation/: README.md  auto_triage.py  baselines.py  calibration.py  fuzz.py  harness.py  metamorphic.py  mutation.py  precision.py  recall.py  run_all.sh  sample.py  test_determinism.py
validation/corpus/: labels.yaml
validation/corpus/cases/: bounded_for_range.py  bounded_while_break.py  docs_readme.md  expensive_single_call.py  growing_queue_for.py  not_an_agent.py  sequential_two_calls.py  unbounded_while.py  uncapped_output_call.py  wrapper_chain_while.py
validation/traces/: sample_trace.json
